manifests/ingress-19.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "diaggarw-76de"
    labels:
        app: "diaggarw-76de"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: diaggarw0680-diaggarw-76de.8fd377fc1d604524b4e1.southindia.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "diaggarw-76de"
                servicePort: 8080
